# cv_note

./: .gitignore  README.en.md  README.md  ai_note v1.0.md
2024/config/zsh/: zsh.md
2024/tutorial/: GCC.md  cmake.md  coursework.md  cpp.md  git.md  linux.md  math.md  thirdparty.md  tips.md  vision.md  vscode.md
2024/tutorial/GCC/B/: main  main.c
2024/tutorial/GCC/B/include/: hello.h
2024/tutorial/GCC/B/src/: hello.c
2024/tutorial/GCC/C/: main  main.c
2024/tutorial/GCC/C/include/: hello_c.h
2024/tutorial/GCC/D/: main
2024/tutorial/GCC/D/src/: hello_c.c
2024/tutorial/inference/onnx/: CMakeLists.txt  mnist.cpp
2024/tutorial/model/: check_onnx.py  export_onnx.py  save_pt.py
2024/tutorial/project_A/: CMakeLists.txt  README.md
2024/tutorial/project_A/include/: log.hpp
2024/tutorial/project_A/include/share/: area.hpp
2024/tutorial/project_A/include/static/: perimeter.hpp
2024/tutorial/project_A/src/: area.cpp  log.cpp  main.cpp  perimeter.cpp
2024/tutorial/project_B/: CMakeLists.txt
2024/tutorial/project_B/src/: CMakeLists.txt
2024/tutorial/project_B/src/apps/hero/: CMakeLists.txt  main.cpp
2024/tutorial/project_B/src/apps/infantry/: CMakeLists.txt  main.cpp
2024/tutorial/project_B/src/apps/sentry/: CMakeLists.txt  main.cpp
2024/tutorial/project_B/src/device/: CMakeLists.txt
2024/tutorial/project_B/src/device/camera/: CMakeLists.txt  camera.cpp  camera.hpp  main.cpp
2024/tutorial/project_B/src/device/imu/: CMakeLists.txt  imu.cpp  imu.hpp
2024/tutorial/project_B/src/device/lidar/: CMakeLists.txt  lidar.cpp  lidar.hpp
2024/tutorial/project_B/src/vision/: CMakeLists.txt
2024/tutorial/project_B/src/vision/detector/: CMakeLists.txt  detector.cpp  detector.hpp
2024/tutorial/project_B/src/vision/locate/: CMakeLists.txt  locate.cpp  locate.hpp
2024/tutorial/project_B/src/vision/predictor/: CMakeLists.txt  predictor.cpp  predictor.hpp
2024/tutorial/project_C/src/: CMakeLists.txt
2024/tutorial/project_C/src/app1/: CMakeLists.txt  main.cpp
2024/tutorial/project_C/src/app2/: CMakeLists.txt  main.cpp
2024/tutorial/project_C/src/app3/: CMakeLists.txt  main.cpp
2024/tutorial/project_D/: CMakeLists.txt  hello  main.cpp
2024/tutorial/project_E/: CMakeLists.txt  main.cpp
2024/tutorial/project_E/include/: hello.hpp
2024/tutorial/project_E/src/: hello.cpp
Markdown/: User Guide.md  ai_note v1.0.md  ai_note v1.1.md
PPTX/: Buff与git讲解.pptx  CPP与Linux(wsl)讲解.pptx  入队考核.pptx  第一次组会.pptx  第三次组会.pptx  自瞄与代码讲解.pptx
draw.io/: Buff (2).drawio  Buff.drawio  OreCube.drawio  程序层次图.drawio  自瞄.drawio  自瞄流程图.drawio
