cmake_minimum_required(VERSION 3.12)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/camera)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/imu)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lidar)

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/camera/*.hpp
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/imu/*.hpp
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/lidar/*.hpp
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(TARGETS Dcamera
    EXPORT Dcamera
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(TARGETS Dimu
    EXPORT Dimu
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(TARGETS Dlidar
    EXPORT Dlidar
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)