cmake_minimum_required(VERSION 3.12)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/detector)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/locate)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/predictor)

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/detector/*.hpp
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/locate/*.hpp
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/predictor/*.hpp
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(TARGETS detector
    EXPORT detector
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(TARGETS locate
    EXPORT locate
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(TARGETS predictor
    EXPORT predictor
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)